noticed assigment using just harry adding to mock

--- a/docker/nginx.fiktivne-knihy.conf
+++ b/docker/nginx.fiktivne-knihy.conf
@@ -13,6 +13,10 @@ server {
         if ( $query_string = "nazov=harry%20potter" ) {
             return 200 '{"data":[{"nazov":"Harry Potter a kamen mudrcov","cena":"10€"},{"nazov":"Harry Potter a tajomna komnata","cena":"11€"},{"nazov":"Harry Potter a vazen z Azkabanu","cena":"7€"}]}';
         }
+        # work assigment specifying query as 'harry' only adding in case someone will use it :)
+        if ( $query_string = "nazov=harry" ) {
+            return 200 '{"data":[{"nazov":"Harry Potter a kamen mudrcov","cena":"10€"},{"nazov":"Harry Potter a tajomna komnata","cena":"11€"},{"nazov":"Harry Potter a vazen z Azkabanu","cena":"7€"}]}';
+        }
         if ( $query_string = "nazov=stoparuv%20pruvodce" ) {
             return 200 '{"data":[{"nazov":"Stoparuv pruvodce galaxii","cena":"8.50€"},{"nazov":"Stoparuv pruvodce galaxii 2: Restaurant na konci vesmiru","cena":"11€"}]}';
         }
