--- a/docker/nginx.nonrealbookshop.conf
+++ b/docker/nginx.nonrealbookshop.conf
@@ -13,6 +13,10 @@ server {
         if ( $query_string = "title=harry%20potter" ) {
             return 200 '[{"title":"Harry Potter a kamen mudrcov","price":"7","currency":"€","lang":"SK"},{"title":"Harry Potter a tajomna komnata","price":"15","currency":"€","lang":"SK"},{"title":"Harry Potter a vazen z Azkabanu","price":"18","currency":"€","lang":"SK"}]';
         }
+        # work assigment specifying querry as 'harry' only adding in case someone will use it :)
+        if ( $query_string = "title=harry" ) {
+            return 200 '[{"title":"Harry Potter a kamen mudrcov","price":"7","currency":"€","lang":"SK"},{"title":"Harry Potter a tajomna komnata","price":"15","currency":"€","lang":"SK"},{"title":"Harry Potter a vazen z Azkabanu","price":"18","currency":"€","lang":"SK"}]';
+        }
         if ( $query_string = "title=stoparuv%20pruvodce" ) {
             return 200 '[{"title":"Stoparuv pruvodce zemekouli","price":"15.71","currency":"€","lang":"CZ"},{"title":"Stoparuv pruvodce galaxii","price":"9.12","currency":"€","lang":"CZ"},{"title":"Stoparuv pruvodce galaxii 2: Restaurant na konci vesmiru","price":"10.95","currency":"€","lang":"CZ"},{"title":"Stoparuv pruvodce galaxii 3: Zivot, vesmir a vubec","price":"42","currency":"€","lang":"CZ"}]';
         }
